Fix display on pagination on narrow clients.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -50,7 +50,7 @@
         display: none;
     }
     .pagination .previous, .pagination .active, .pagination .next {
-        display: inherit;
+        display: inline;
     }
 }
 @media (min-width: 980px) {
